<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false"
    android:paddingBottom="20dp"
    android:background="@drawable/bg_border_topsheet">

    <com.kt.lib_ads_inhouse.a8_app_utils.customtext.CustomTextViewFont700_notosan
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/feedback"
        style="@style/CustomText_color_02343F_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/icon_dismis_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.kt.lib_ads_inhouse.a8_app_utils.customtext.CustomTextViewFont600_notosan
        android:id="@+id/tvChosseYourSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/choose_your_subject"
        style="@style/CustomText_color_2E3338_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_text_input"
        android:fontFamily="@font/notosans_semibold"
        android:hint="@string/your_subject"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvChosseYourSubject"
        tools:layout_editor_absoluteX="20dp" />

    <com.kt.lib_ads_inhouse.a8_app_utils.customtext.CustomTextViewFont600_notosan
        android:id="@+id/tv_what_tip_you_like_to_give_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/what_tip_you_like_to_give_us"
        style="@style/CustomText_color_2E3338_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSubject" />

    <EditText
        android:id="@+id/et_enter_your_feedback"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_et_details"
        android:fontFamily="@font/noto_regular"
        android:gravity="top"
        android:hint="@string/enter_your_feedback"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_what_tip_you_like_to_give_us"
        tools:layout_editor_absoluteX="20dp" />

    <com.kt.lib_ads_inhouse.a8_app_utils.customtext.CustomTextViewFont700_notosan
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/bg_btn_save"
        android:gravity="center"
        android:text="@string/send"
        android:textAlignment="center"
        android:textAllCaps="false"
        style="@style/CustomText_White_16"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_your_feedback" />
</androidx.constraintlayout.widget.ConstraintLayout>